feat: 完善FileController
