# docs/swagger.yaml
@@ -492,9 +492,9 @@ definitions:
     properties:
       createdAt:
         type: string
-      filename:
-        type: string
       id:
+        type: string
+      name:
         type: string
       size:
         type: integer
@@ -1360,6 +1360,54 @@ paths:
       tags:
       - 分类
       x-apifox-folder: 文章分类
+  /file/delete:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 请求参数
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/types.ResourceID'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.ApiEmptyResult'
+      security:
+      - ApiKeyAuth: []
+      summary: 文件删除
+      tags:
+      - 文件
+      x-apifox-folder: 文件
+  /file/download:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 请求参数
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/types.ResourceID'
+      produces:
+      - application/octet-stream
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: file
+      security:
+      - ApiKeyAuth: []
+      summary: 文件下载
+      tags:
+      - 文件
+      x-apifox-folder: 文件
   /file/upload:
     post:
       consumes:
@@ -1766,8 +1814,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/types.ApiCreateResult'
-      security:
-      - ApiKeyAuth: []
       summary: 用户登录
       tags:
       - 用户
@@ -1807,8 +1853,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/types.ApiCreateResult'
-      security:
-      - ApiKeyAuth: []
       summary: 用户注册
       tags:
       - 用户
