# internal/app/file/controller/controller.go
@@ -1,25 +1,45 @@
 package controller
 
 import (
+    `fmt`
+    
     `dpcms/internal/app/file/internal/dto`
     `dpcms/internal/app/file/service`
     `dpcms/internal/erroz`
+    `dpcms/internal/infra/encodedid`
+    `dpcms/internal/infra/persistence/datatype`
+    `dpcms/internal/middleware/authz`
+    `dpcms/internal/types`
     `dpcms/internal/util/contextutil`
+    `dpcms/internal/util/httpbinding`
     
     `github.com/gin-gonic/gin`
 )
 
 type FileController struct {
     fileSrv *service.FileService
+    auth    *authz.Builder
+    hashID  *encodedid.HashID
 }
 
-func NewFileController(fileSrv *service.FileService) *FileController {
-    return &FileController{fileSrv: fileSrv}
+func NewFileController(fileSrv *service.FileService, auth *authz.Builder, hashID *encodedid.HashID) *FileController {
+    return &FileController{fileSrv: fileSrv, auth: auth, hashID: hashID}
 }
 
 func (s FileController) Setup(engine *gin.Engine) {
-    g := engine.Group("/file")
+    acl := s.auth.AccessControl("file")
+    
+    g := engine.Group("/file", acl.Middleware())
     g.POST("/upload", s.Upload)
+    g.POST("/delete", s.Delete)
+    g.GET("/download", s.Download)
+    
+    acl.WithRouterOption(
+        g,
+        authz.WithRouterPermission("/upload", "upload"),
+        authz.WithRouterPermission("/delete", "delete"),
+        authz.WithRouterWhitelist("/download"),
+    )
 }
 
 // Upload
@@ -49,12 +69,66 @@ func (s FileController) Upload(ctx *gin.Context) {
         return
     }
     result, err := s.fileSrv.Save(ctx, u, dto.FileSaveCommand{
-        Filename: fileHeader.Filename,
-        Data:     f,
+        Name: fileHeader.Filename,
+        Data: f,
     })
     if err != nil {
         erroz.ResolveWithAbort(ctx, err)
         return
     }
     erroz.OK.WithOption(erroz.WithData(result)).Write(ctx)
+}
+
+// Download
+// @x-apifox-folder "文件"
+// @Security ApiKeyAuth
+// @Summary 文件下载
+// @Tags 文件
+// @Accept json
+// @Produce application/octet-stream
+// @Param id query string true "文件ID"
+// @Success 200 {file} file
+// @Router /file/download [get]
+func (s FileController) Download(ctx *gin.Context) {
+    hashID := ctx.Query("id")
+    if hashID == "" {
+        erroz.DataNotFound.WriteWithAbort(ctx)
+        return
+    }
+    id, err := s.hashID.DecodeUint64(hashID)
+    if err != nil {
+        erroz.DataNotFound.WriteWithAbort(ctx)
+        return
+    }
+    reader, meta, err := s.fileSrv.OpenFileRecordByID(ctx, datatype.SafeUint64(id[0]))
+    if err != nil {
+        erroz.ResolveWithAbort(ctx, err)
+        return
+    }
+    ctx.DataFromReader(
+        200,
+        meta.Size.Raw(),
+        "application/octet-stream",
+        reader,
+        map[string]string{
+            "Content-Disposition": fmt.Sprintf(`attachment; filename="%s"`, meta.Name),
+        },
+    )
+    _ = reader.Close()
+}
+
+// Delete
+// @x-apifox-folder "文件"
+// @Security ApiKeyAuth
+// @Summary 文件删除
+// @Tags 文件
+// @Accept json
+// @Produce json
+// @Param body body types.ResourceID true "请求参数"
+// @Success 200 {object} types.ApiEmptyResult
+// @Router /file/delete [post]
+func (s FileController) Delete(ctx *gin.Context) {
+    httpbinding.BindJSON[types.ResourceID](ctx, func(params types.ResourceID) (any, error) {
+        return nil, s.fileSrv.Delete(ctx, params.ID)
+    })
 }
